# cv

./: .gitignore  Makefile  README.md  cv.yaml
api/: fabfile.py  pyproject.toml
api/api/: main.py  models.py  routes.py  schemas.py  utils.py
pdf/scripts/: build.sh
